<resources>
	<string name="app_name">World data</string>
	<string name="table_title">Rate by: </string>
	<string name="map_button">Map</string>
	<string name="chart_button">Chart</string>
	<string name="position">%1$d</string>


	<!-- Home screen -->
	<string name="home_headline">What do you want to do?</string>
	<string name="quiz_button">Take a Quiz!</string>
	<string name="explore_button">Explore Countries!</string>

	<!-- country rating: -->
	<string name="country_rating_headline">Rate By:</string>

	<!-- country display-->
	<string name="flag">Flag</string>
	<string name="coat_of_arms">Coat Of Arms</string>
	<string name="search_country">Search a country…</string>

	<string name="official_name">Official name:</string>
	<string name="capital">Capital:</string>
	<string name="language">National language:</string>
	<string name="population">Population:</string>
	<string name="area">Area:</string>
	<string name="density">Density:</string>
	<string name="gdp">GDP:</string>
	<string name="gdp_per_capita">GDP Per Capita:</string>
    <string name="located_in">Located in:</string>
    <string name="timezones">Timezones:</string>

	<!-- Quiz -->
	<string name="no_more_questions_title">You have answered all the questions!</string>
	<string name="finished_questions_title">Well Done!</string>
	<string name="finished_questions_subtitle">You have answered %1$d questions correctly out of %2$d!</string>
	<string name="next_question">Next Question</string>

</resources>