<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/official_name_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/official_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/official_name_view"
            tools:text="Hellenic Republic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/divider_horizontal_full" />

        <TextView
            android:id="@+id/capital_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/capital"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/capital_view"
            tools:text="Athens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/divider_horizontal_full" />

        <TextView
            android:id="@+id/language_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/language"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/language_view"
            tools:text="Greek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/divider_horizontal_full" />

        <TextView
            android:id="@+id/population_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/population"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/population_view"
            tools:text="12M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/divider_horizontal_full" />

        <TextView
            android:id="@+id/area_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/area"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/area_view"
            tools:text="21,000 km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/divider_horizontal_full" />

        <TextView
            android:id="@+id/continent_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/located_in"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/continent_view"
            tools:text="Europe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/divider_horizontal_full" />

        <TextView
            android:id="@+id/timezones_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/timezones"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/timezones_view"
            tools:text="UTC +2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/divider_horizontal_full" />

        <TextView
            android:id="@+id/density_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/density"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/density_view"
            tools:text="24 people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/divider_horizontal_full" />

        <TextView
            android:id="@+id/gdp_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gdp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/gdp_view"
            tools:text="423 $"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/divider_horizontal_full" />

        <TextView
            android:id="@+id/gdp_pc_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gdp_per_capita"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/gdp_pc_view"
            tools:text="423 $"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface" />

    </LinearLayout>

</ScrollView>